# Enging-Remastered

./: CMakeLists.txt  README.md  example.py  main.py  setup.py  test.py  wheelNamer.py
Engine-Remastered/Main/: Makefile  app.cpp  main.cpp  module.cpp  test.cpp
Engine-Remastered/Main/GraphicsPipeline/: compile.sh  shader.frag  shader.vert
Engine-Remastered/Main/ProxyFunctions/: proxy.cpp  proxy.h
Engine-Remastered/Main/VertexHandler/: Makefile  vertexReader.cpp  vertexReader.h  vertexTranslator.cpp
Engine-Remastered/Main/app/: Makefile  app.cpp  app.h  buffers.cpp  commands.cpp  depthBuffer.cpp  draw.cpp  pipeline.cpp  proxy.cpp  proxy.h  swapchain.cpp  validation.cpp  vertexBuffer.cpp  vertexBuffer.h
Engine-Remastered/Main/app/Buffers/: Makefile  buffers.cpp  depthBuffer.cpp  indexBuffer.cpp  vertexBuffer.cpp  vertexBuffer.h
Engine-Remastered/Main/app/Constructor/: Makefile  commands.cpp  devices.cpp  draw.cpp  imageReader.cpp  pipeline.cpp  swapchain.cpp  validation.cpp
Engine-Remastered/Main/objects/: Makefile  object.cpp  object.h  vertexBuffer.cpp  vertexReader.cpp
Engine-Remastered/Main/universalConstructors/: imageReader.cpp  proxy.cpp  uBuffers.cpp  uCommands.cpp  uniformBuffers.cpp  universalConstructors.h
Engine-Remastered/VertexMeshes/: cube.ply  cube2.ply  cylander.ply
Engine-Remastered/include/: app.h  object.h  universalConstructors.h  vertexReader.h
EngineRemastered.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
EngineRemastered/API/: main.py
EngineRemastered/Main/: app.cpp  main.cpp  module.cpp
EngineRemastered/Main/app/: commands.cpp  depthBuffer.cpp  devices.cpp  pipeline.cpp  swapchain.cpp
EngineRemastered/Main/objects/: object.cpp  vertexBuffer.cpp  vertexReader.cpp
EngineRemastered/Main/universalConstructors/: buffers.cpp  proxy.cpp
EngineRemastered/VertexMeshes/: cube2.ply  ramen.ply
EngineRemastered/include/: app.h  object.h  universalConstructors.h  vertexReader.h
Testing/: overview  overview.c  testing.cpp
Testing/compiling/: compiling.c  compiling.h  receiving.cpp  test
Testing/overview.dSYM/Contents/: Info.plist
Testing/window/: window.c
Testing/window/test1/: window.app
Testing/window/test2/: window.c
Testing/window/vulkanWindow/: window.cpp
begining.dSYM/Contents/: Info.plist
builds/: CMakeCache.txt  Makefile  app  app.app  cmake_install.cmake  example.py  test
builds/app.app.dSYM/Contents/: Info.plist
builds/objectFiles/makeFiles/: Makefile copy 3  Makefile copy 7
builds/testing/: testing.c
extra/: CmakeLists.txt
extra/planning/: app.cpp
notes/: references.md
notes/basic/: intro_to_c.md
planning/: packages.md
(+28 files in other folders)
